# my-first-python-project

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  tasks.py
backups/vsrx1/: 20210826_2105.conf
backups/vsrx2/: 20210826_2106.conf
