[tool.poetry]
name = "my-first-python-project"
version = "0.1.0"
description = "Junos configuration backup tool"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
junos-eznc = "^2.6.2"
jxmlease = "^1.0.3"
python-dotenv = "^0.19.0"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
